--- a/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-prescreening/dfa-prescreening.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-prescreening/dfa-prescreening.component.html
@@ -3,7 +3,7 @@
     <div class="col-8">
       <span class="page-heading">Are You Eligible?</span>
     </div>
-    <div class="col-4" *ngIf="isLoggedIn==true">
+    <div class="col-4" *ngIf="isLoggedIn===true">
       <button
         class="button-p save-button col-4"
         style="height:40px !important; vertical-align: middle; width:220px;"
