--- a/dfa/src/UI/embc-dfa/src/app/feature-components/nextstepsprofile/nextstepsprofile.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/nextstepsprofile/nextstepsprofile.component.html
@@ -35,7 +35,7 @@
         </div>
       <br />
       <br />
-      <div class="row" *ngIf="eventsCount == 0">
+      <div class="row" *ngIf="eventsCount === 0">
         <div class="col-3" style="justify-content:center">
           <button
             class="button-p notice-button"
