--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/occupants/occupants.component.html
@@ -289,7 +289,7 @@
                 <br /><br/>
               </div>
 
-              <div *ngIf="secondaryApplicantsDataSource.getValue().length == 0 && (vieworedit === 'view' || vieworedit === 'edit' || vieworedit === 'viewOnly')">
+              <div *ngIf="secondaryApplicantsDataSource.getValue().length === 0 && (vieworedit === 'view' || vieworedit === 'edit' || vieworedit === 'viewOnly')">
                 <b>No secondary applicants added.</b>
                 <br /><br/>
               </div>
