--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/sign-and-submit/sign-and-submit.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/sign-and-submit/sign-and-submit.component.html
@@ -40,7 +40,7 @@
 
       </ng-container>
     </form>
-    <div *ngIf="dfaApplicationMainDataService.isSubmitted == true || isReadOnly === true">
+    <div *ngIf="dfaApplicationMainDataService.isSubmitted === true || isReadOnly === true">
       <b style="font-size:25px">Your application has been submitted.</b><br/><br/>
 
       <b>Please read the following carefully:</b> <br/><br/>
