--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/bc-address/bc-address.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/bc-address/bc-address.component.html
@@ -1,54 +1,7 @@
 <div [formGroup]="addressForm">
   <br />
   <div class="row">
-    <div [ngClass]="primaryAddressWarning == true ? 'col-md-5' : 'col-md-12' ">
-      <!--<mat-form-field appearance="outline">
-      <mat-label>Address Line 1</mat-label>
-      <input formControlName="addressLine1"
-             matInput
-              placeholder="Address Line 1"
-              maxlength="100"
-              required
-              [readonly]="primaryAddressWarning == true || readOnly == true"
-             [formControl]="myControlAddr"
-             [matAutocomplete]="autoAddress1"
-             (input)="checkCanadaPostAddress(myControlAddr,
-               addressFormControl?.addressLine2,
-               addressFormControl?.community,
-               addressFormControl?.stateProvince,
-               addressFormControl?.postalCode,
-               addressMatchResponse
-               )"
-             />
-        <mat-error
-          *ngIf="
-            addressFormControl?.addressLine1.invalid &&
-            addressFormControl?.addressLine1.hasError('required')
-          "
-        >
-          Address Line 1 is required</mat-error
-        >
-        <mat-error
-          *ngIf="
-            addressFormControl?.addressLine1.invalid &&
-            addressFormControl?.addressLine1.hasError('maxLength')
-          "
-        >
-          Maximum length is 100 characters</mat-error
-        >
-      <mat-autocomplete autoActiveFirstOption #autoAddress1="matAutocomplete">-->
-        <!--@for (option of filteredCountries | async; track option) {
-          <mat-option [value]="option">{{option}}</mat-option>
-        }-->
-        <!--<mat-option (onSelectionChange)="selectOption(option, addressMatchResponse)"
-            *ngFor="let option of filteredAddress | async"
-            [value]="option.name"
-          >
-            {{ option.name }}
-          </mat-option>
-      </mat-autocomplete>
-    </mat-form-field>-->
-
+    <div [ngClass]="primaryAddressWarning === true ? 'col-md-5' : 'col-md-12' ">
       <mat-form-field appearance="outline" >
         <mat-label>Address Line 1</mat-label>
         <input
@@ -57,7 +10,7 @@
           placeholder="Address Line 1"
           maxlength="100"
           required
-          [readonly]="primaryAddressWarning == true || readOnly == true"
+          [readonly]="primaryAddressWarning === true || readOnly === true"
           [formControl]="myControlAddr"
              [matAutocomplete]="autoAddress1"
              (input)="checkCanadaPostAddress(myControlAddr,
@@ -85,7 +38,7 @@
           Maximum length is 100 characters</mat-error
         >
         <mat-autocomplete autoActiveFirstOption #autoAddress1="matAutocomplete">
-        
+
         <mat-option (onSelectionChange)="selectOption(option, addressMatchResponse)"
             *ngFor="let option of filteredAddress | async"
             [value]="option.name"
@@ -97,7 +50,7 @@
     </div>
     <div class="col-md-1">
     </div>
-    <div class="col-md-5 addressMessage" *ngIf="primaryAddressWarning == true">
+    <div class="col-md-5 addressMessage" *ngIf="primaryAddressWarning === true">
       This is your primary address from your BC Services Card and can't be changed.
       If you need to update your primary address, visit
       <br />
@@ -115,7 +68,7 @@
           matInput
           placeholder="Address Line 2"
           maxlength="100"
-          [readonly]="primaryAddressWarning == true || readOnly == true"
+          [readonly]="primaryAddressWarning === true || readOnly === true"
           (focusout)="checkCanadaPostAddress(addressFormControl?.addressLine1,
                addressFormControl?.addressLine2,
                addressFormControl?.community,
@@ -138,16 +91,6 @@
 
   <div class="row">
     <div class="col-md-4">
-      <!--<mat-autocomplete #auto="matAutocomplete">
-        @for (option of options; track option) {
-          <mat-option [value]="option">{{option}}</mat-option>
-        }
-      </mat-autocomplete>-->
-      <!--<input type="text" [formControl]="typeahead" placeholder="Type ahead !" (input)="suggest()">
-      <div class="suggestions" *ngIf="suggestions.length">
-        <p *ngFor="let s of suggestions">{{s}}</p>
-      </div>-->
-
       <mat-form-field appearance="outline" *ngIf="isCanadaPostValidated==='false'">
       <mat-label>City</mat-label>
       <input type="text"
@@ -158,12 +101,9 @@
              formControlName="community"
              [matAutocomplete]="auto"
              (keyup)="SelectCity($event, 'input')"
-             [readonly]="primaryAddressWarning == true || readOnly == true"
+             [readonly]="primaryAddressWarning === true || readOnly === true"
              >
       <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
-        <!--@for (option of filteredCountries | async; track option) {
-          <mat-option [value]="option">{{option}}</mat-option>
-        }-->
         <mat-option (onSelectionChange)="SelectCity(option, null)"
             *ngFor="let option of filteredOptions | async"
             [value]="option.name"
@@ -181,7 +121,7 @@
           formControlName="community"
           matInput
           placeholder="City"
-          [readonly]="primaryAddressWarning == true || readOnly == true"
+          [readonly]="primaryAddressWarning === true || readOnly === true"
           (focusout)="checkCanadaPostAddress(addressFormControl?.addressLine1,
                addressFormControl?.addressLine2,
                addressFormControl?.community,
@@ -199,7 +139,6 @@
         >
           City is required</mat-error
         >
-        <!--<mat-error *ngIf="validateCity()"> City is invalid</mat-error>-->
         <mat-error
           *ngIf="
             addressFormControl?.community.invalid &&
@@ -220,7 +159,7 @@
           formControlName="stateProvince"
           matInput
           placeholder="Province"
-          [readonly]="primaryAddressWarning == true || readOnly == true"
+          [readonly]="primaryAddressWarning === true || readOnly === true"
           value="British Columbia"
           (focusout)="checkCanadaPostAddress(addressFormControl?.addressLine1,
                addressFormControl?.addressLine2,
@@ -249,7 +188,7 @@
         <input
           formControlName="postalCode"
           matInput
-          [readonly]="primaryAddressWarning == true || readOnly == true"
+          [readonly]="primaryAddressWarning === true || readOnly === true"
           placeholder="Postal Code"
           (focusout)="checkCanadaPostAddress(addressFormControl?.addressLine1,
                addressFormControl?.addressLine2,
