--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/apptype-insurance/apptype-insurance.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/apptype-insurance/apptype-insurance.component.html
@@ -1,11 +1,8 @@
 <mat-card appearance="outlined" class="card-align" style="border:none;" [class.mat-elevation-z0]="true">
   <mat-card-content>
-
     <p class="sub-heading" style="font-size: 20px">Application Type & Insurance</p>
     <br/>
-
     <form [formGroup]="appTypeInsuranceForm">
-
       <ng-container>
         <div class="row">
           <div class="col-md-12 bottomspace">
@@ -239,7 +236,6 @@
             </mat-radio-group>
           </div>
         </div>
-
         <!-- Insurance options -->
         <div class="row">
           <div class="col-md-8 bottomspace">
@@ -269,8 +265,8 @@
                   able to confirm eligibility until this information is provided.<br/><br/>
                 </div>
                 <div class="sub-heading radio-extra-label col-md-10" *ngIf="appTypeInsuranceForm.get('insuranceOption').value === option.key && option.value === radioInsuranceOptions.No">
-                  <br/>I/We declare that we carry no insurance (no fire, theft or liability) on the property listed on this Disaster Financial Assistance application.  Most mortgage lenders require home insurance 
-                  to approve a loan. I/We acknowledge that if we have no insurance and have a mortgage we may be asked to show the mortgage agreement.  If I am later to have found to have insurance, I will be 
+                  <br/>I/We declare that we carry no insurance (no fire, theft or liability) on the property listed on this Disaster Financial Assistance application.  Most mortgage lenders require home insurance
+                  to approve a loan. I/We acknowledge that if we have no insurance and have a mortgage we may be asked to show the mortgage agreement.  If I am later to have found to have insurance, I will be
                   required to repay any financial assistance I received.<br/><br/>
                   The Disaster Financial Assistance (DFA) Program operates under provincial legislation: <i>Emergency Program Act</i> and the <i>Compensation and
                   Disaster Financial Assistance Regulation</i>. Ministry of Emergency Management and Climate Readiness BC is obliged to provide DFA in accordance with this legislation. Section 8(1) of the Regulation
@@ -300,7 +296,7 @@
         <div class="row">
           <div class="col-md-6 bottomspace">
             <app-signature
-              [hidden]="notInsured != true"
+              [hidden]="notInsured !== true"
               isReadOnly="false"
               [isRequired]="notInsured"
               whoseSignature="Applicant"
@@ -308,7 +304,7 @@
           </div>
           <div class="col-md-6 bottomspace">
             <app-signature
-              [hidden]="notInsured != true"
+              [hidden]="notInsured !== true"
               isReadOnly="false"
               [isRequired]="false"
               whoseSignature="Secondary Applicant"
