EMCRI-1066: Update code on DFA Public (OpenShift) Portal to add Applicant Declaration for EMCRI-1004 (#757)

--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
@@ -136,7 +136,7 @@
         </div>
         <!--&& ((formCreationService.otherContactsForm$ | async)?.value?.otherContacts?.length > 0)-->
         <!-- <div class="col-md-6" *ngIf="!isSubmitted && applicationDetailsValid && contactsValid"> -->
-        <div class="col-md-6" *ngIf="!isSubmitted && applicationDetailsValid && contactsValid && primaryContactValidated ">
+        <div class="col-md-6" *ngIf="!isSubmitted && applicationDetailsValid && contactsValid && primaryContactValidated && authorizedRepresentativeValid ">
         <!--<div class="col-md-6">-->
         <button
           class="button-p save-button"
