--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/review/review.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/review/review.component.scss
@@ -81,3 +81,70 @@ u {
 table{
     width: 100%;
 }
+
+mat-form-field {
+    width: 100%;
+}
+
+.card-content-align {
+    padding: 0 22px;
+}
+
+.primary-radio-group {
+  display: flex;
+  flex-direction: column;
+  //margin: 15px 0;
+}
+
+.primary-radio-button {
+    margin: 5px;
+}
+
+.radio-extra-label {
+  font-weight: normal;
+  //margin-left: 30px;
+}
+
+.highlight {
+    font-weight: 700;
+    color: #169bd5;
+}
+
+.horizontal-radio-group {
+  display: flex; flex-direction: row;
+  margin: 0;
+}
+
+.topSpace{
+    margin-top: 15px;
+}
+
+::ng-deep .mat-select-panel .mat-option {
+  height: unset !important;
+}
+
+::ng-deep .mat-mdc-form-field-error-wrapper {
+  padding-left: 0px !important;
+}
+
+::ng-deep span.mat-option-text {
+  white-space: normal !important;
+}
+
+.mat-header-cell {
+  font-weight: 700;
+  font-size: 15px;
+  color: black;
+  height: 51px;
+}
+
+.mat-table {
+    overflow: auto;
+    width: 100%;
+    max-height: 500px;
+  }
+  
+.custom-mat-error {
+    display: block;
+    //padding-top: 3px;
+  }
