EMCRI-638: Fixed currency format in three different places in three different ways. (#759)

--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/review-project/review-project.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/review-project/review-project.component.html
@@ -227,8 +227,8 @@
             <span [ngClass]="{'missing-info': !(formCreationService.recoveryPlanForm$ | async)?.value?.estimateCostIncludingTax || (formCreationService.recoveryPlanForm$ | async)?.controls?.estimateCostIncludingTax.invalid}">
               {{
                 (formCreationService.recoveryPlanForm$ | async)?.value
-                  .estimateCostIncludingTax ? (formCreationService.recoveryPlanForm$ | async)?.value
-                  .estimateCostIncludingTax : "Enter required information"
+                  .estimateCostIncludingTax ? ((formCreationService.recoveryPlanForm$ | async)?.value
+                  .estimateCostIncludingTax | currency) : "Enter required information"
               }}
             </span>
           </div>
