--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/invoice/invoice.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/invoice/invoice.component.html
@@ -39,7 +39,7 @@
                   <mat-form-field appearance="outline" class="mat-form-round">
                     <div class="searchDiv">
                         <input #currencyBoxemcrApprovedAmount id="currencyBoxemcrApprovedAmount"
-                          formControlName="emcrApprovedAmount" matInput />
+                          formControlName="emcrApprovedAmount" matInput mask="separator.2" thousandSeparator="," decimalMarker="." />
                         <span class="currencyText">CA$</span>                   
                     </div>
                   </mat-form-field>
