fixed missed wording (#758)

--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/dfa-invoice-dashboard/dfa-invoice-dashboard.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/dfa-invoice-dashboard/dfa-invoice-dashboard.component.html
@@ -9,7 +9,7 @@
         <br /><br />
         Don't group invoices from the same supplier; each invoice must be entered separately.
         <br /><br />
-        Invoices must be billed to the Local Government or Indigenous Governing Body submitting the claim.
+        Invoices must be billed to the Indigenous Governing Bodies or Local Authorities submitting the claim.
         <br /><br />
         Equipment costs claimed must not exceed the Blue Book rates.
         <br /><br />
