EMCRI-952: Portal: Update messaging on Contact Details (#761)

--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/contacts/contacts.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/contacts/contacts.component.html
@@ -137,6 +137,13 @@
             Primary Contact Details<span style="color:red">*</span>
           </p>
         </div>
+        <div class="col-md-8 infoText">
+          <mat-icon class="iconStyleBlue">info</mat-icon>
+          <span class="iconText">
+            These contact details are from BCeID and may only be changed through the account holder's BCeID account.
+          </span>
+        </div>
+        <p></p>
         <div class="row">
           <div class="col-md-4">
             <p>
@@ -190,6 +197,13 @@
           </div>
         </div>
 
+        <div class="col-md-9 infoText">
+          <mat-icon class="iconStyleBlue">info</mat-icon>
+          <span class="iconText">
+            If the BCeID account holder has been a primary contact before on a DFA application, these contact details may already be on file and will be shown. Please provide or update as needed.
+          </span>
+        </div>
+        <p></p>
         <div class="row">
           <div class="col-md-4">
             <p>
